[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/records_ui_row.gd" type="Script" id=2]

[node name="records_ui_row" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -64.0
margin_bottom = -166.0
rect_min_size = Vector2( 256, 14 )
script = ExtResource( 2 )

[node name="level_name" type="Label" parent="."]
margin_right = 24.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
valign = 1

[node name="best_score" type="Label" parent="."]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "0.00"
align = 1
valign = 1

[node name="best_full" type="Label" parent="."]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "0.00"
align = 1
valign = 1

[node name="best_score_nh" type="Label" parent="."]
margin_left = 152.0
margin_right = 184.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "0.00"
align = 1
valign = 1

[node name="best_full_nh" type="Label" parent="."]
margin_left = 208.0
margin_right = 240.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 160, -48 )
custom_fonts/font = ExtResource( 1 )
text = "0.00"
align = 1
valign = 1
